--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="app">
-  {{msg}}
+  <img alt="app" :src="appLogo" style="height:36px" />
 </div>
 <!-- built files will be auto injected -->
 </body>
